# hdmf-zarr

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  example.h5  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-min.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py  test.py  test_gallery.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: HDMF_dev.yaml  black.yml  check_external_links.yml  deploy_release.yml  run_all_tests.yml  run_coverage.yml  run_flake8.yml  run_tests.yml
docs/: CONTRIBUTING.rst  Makefile
docs/gallery/: Untitled3.ipynb  plot_convert_nwb.py  plot_convert_nwb_hdf5.py  plot_nwb_zarrio.py  plot_nwbzarrio.py  plot_zarr_dataset_io.py  plot_zarr_io.py  read.py
docs/gallery/resources/: README.rst  sub_anm00239123_ses_20170627T093549_ecephys_and_ogen.nwb
docs/resources/: README.rst
docs/source/: conf.py  hdmf_zarr.backend.rst  hdmf_zarr.rst  hdmf_zarr.utils.rst  index.rst  installation.rst  integrating_data_stores.rst  overview.rst  storage.rst
docs/source/figures/: gallery_thumbnails.pptx  logo_hdmf_zarr.pptx
ecephys_tutorial.nwb.zarr/: .zattrs
ecephys_tutorial.nwb.zarr/acquisition/ElectricalSeries/: .zattrs
ecephys_tutorial.nwb.zarr/acquisition/ElectricalSeries/data/: .zattrs  0.0
ecephys_tutorial.nwb.zarr/acquisition/ElectricalSeries/electrodes/: .zarray  .zattrs
ecephys_tutorial.nwb.zarr/file_create_date/: 0
ecephys_tutorial.nwb.zarr/general/experiment_description/: 0
ecephys_tutorial.nwb.zarr/general/experimenter/: .zattrs  0
ecephys_tutorial.nwb.zarr/general/institution/: 0
ecephys_tutorial.nwb.zarr/general/lab/: 0
ecephys_tutorial.nwb.zarr/processing/ecephys/: .zattrs
ecephys_tutorial.nwb.zarr/session_start_time/: 0
ecephys_tutorial.nwb.zarr/units/: .zattrs
ecephys_tutorial.nwb.zarr/units/id/: .zattrs
ecephys_tutorial.nwb.zarr/units/quality/: .zattrs  0
ecephys_tutorial.nwb.zarr/units/spike_times/: .zarray  .zattrs  0
ecephys_tutorial.nwb.zarr/units/spike_times_index/: .zarray  .zattrs  0
ecephys_tutorial.nwb.zarr/units/waveform_mean/: .zarray  .zattrs  0.0
example.zarr/: .zattrs
example.zarr/first_name/: .zattrs
example.zarr/last_name/: .zattrs  0
example.zarr/phone_number/: .zattrs
example_data.zarr/: .zattrs
example_data.zarr/id/: .zattrs
example_data.zarr/test_data_default_settings/: .zarray  .zattrs
example_data.zarr/test_data_nocompression/: .zarray  .zattrs  0.0
example_data.zarr/test_data_zstd_compression/: .zarray  .zattrs  0.0
example_exp.zarr/first_name/: .zattrs
example_exp.zarr/id/: .zattrs
example_exp.zarr/last_name/: .zattrs
example_exp.zarr/phone_number/: .zattrs
example_exp.zarr/phone_number_index/: .zattrs  0
src/hdmf_zarr/: __init__.py  _version.py  backend.py  backend2.py  nwb.py  utils.py  zarr_utils.py
src/hdmf_zarr_plugin/: __init__.py  utils.py
tests/unit/: base_tests_zarrio.py  test_fsspec_streaming.py  test_io_convert.py  test_io_zarr.py  test_io_zarr_storage_backends.py  test_parallel_write.py  test_zarrdataio.py  test_zarrio.py  utils.py
tests/unit/example.zarr/: .zattrs
tests/unit/example.zarr/first_name/: .zattrs  0
tests/unit/example_consolidate.zarr/: .zmetadata
tests/unit/test_consolidate.zarr/: .zattrs  .zmetadata
(+58 files in other folders)
